Kaggle Notebook | Exercise: Explore Your Data | Version 5

--- a/exercise-explore-your-data.ipynb
+++ b/exercise-explore-your-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "575509c7",
+   "id": "923e5d25",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-11-09T08:53:59.908134Z",
@@ -12,10 +12,10 @@
      "shell.execute_reply.started": "2024-11-09T08:53:59.908097Z"
     },
     "papermill": {
-     "duration": 0.005393,
-     "end_time": "2024-11-11T18:39:31.488108",
+     "duration": 0.00518,
+     "end_time": "2024-11-11T19:21:08.948003",
      "exception": false,
-     "start_time": "2024-11-11T18:39:31.482715",
+     "start_time": "2024-11-11T19:21:08.942823",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323df4fc",
+   "id": "5d470706",
    "metadata": {
     "papermill": {
-     "duration": 0.004514,
-     "end_time": "2024-11-11T18:39:31.497879",
+     "duration": 0.004429,
+     "end_time": "2024-11-11T19:21:08.957301",
      "exception": false,
-     "start_time": "2024-11-11T18:39:31.493365",
+     "start_time": "2024-11-11T19:21:08.952872",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +56,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8b223806",
+   "id": "026cded0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:31.509545Z",
-     "iopub.status.busy": "2024-11-11T18:39:31.509011Z",
-     "iopub.status.idle": "2024-11-11T18:39:32.879373Z",
-     "shell.execute_reply": "2024-11-11T18:39:32.877865Z"
+     "iopub.execute_input": "2024-11-11T19:21:08.970122Z",
+     "iopub.status.busy": "2024-11-11T19:21:08.968407Z",
+     "iopub.status.idle": "2024-11-11T19:21:09.984054Z",
+     "shell.execute_reply": "2024-11-11T19:21:09.982465Z"
     },
     "papermill": {
-     "duration": 1.379671,
-     "end_time": "2024-11-11T18:39:32.882363",
+     "duration": 1.024846,
+     "end_time": "2024-11-11T19:21:09.986767",
      "exception": false,
-     "start_time": "2024-11-11T18:39:31.502692",
+     "start_time": "2024-11-11T19:21:08.961921",
      "status": "completed"
     },
     "tags": []
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac0605a",
+   "id": "e70409be",
    "metadata": {
     "papermill": {
-     "duration": 0.004746,
-     "end_time": "2024-11-11T18:39:32.892350",
+     "duration": 0.004289,
+     "end_time": "2024-11-11T19:21:09.995838",
      "exception": false,
-     "start_time": "2024-11-11T18:39:32.887604",
+     "start_time": "2024-11-11T19:21:09.991549",
      "status": "completed"
     },
     "tags": []
@@ -112,19 +112,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab814f00",
+   "id": "a3b2a5d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:32.906306Z",
-     "iopub.status.busy": "2024-11-11T18:39:32.905086Z",
-     "iopub.status.idle": "2024-11-11T18:39:32.969956Z",
-     "shell.execute_reply": "2024-11-11T18:39:32.968791Z"
+     "iopub.execute_input": "2024-11-11T19:21:10.007765Z",
+     "iopub.status.busy": "2024-11-11T19:21:10.006681Z",
+     "iopub.status.idle": "2024-11-11T19:21:10.064864Z",
+     "shell.execute_reply": "2024-11-11T19:21:10.063639Z"
     },
     "papermill": {
-     "duration": 0.074422,
-     "end_time": "2024-11-11T18:39:32.972720",
+     "duration": 0.066927,
+     "end_time": "2024-11-11T19:21:10.067662",
      "exception": false,
-     "start_time": "2024-11-11T18:39:32.898298",
+     "start_time": "2024-11-11T19:21:10.000735",
      "status": "completed"
     },
     "tags": []
@@ -171,19 +171,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "41f6322c",
+   "id": "4d64b9e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:32.986036Z",
-     "iopub.status.busy": "2024-11-11T18:39:32.985097Z",
-     "iopub.status.idle": "2024-11-11T18:39:33.000988Z",
-     "shell.execute_reply": "2024-11-11T18:39:32.999629Z"
+     "iopub.execute_input": "2024-11-11T19:21:10.080710Z",
+     "iopub.status.busy": "2024-11-11T19:21:10.079203Z",
+     "iopub.status.idle": "2024-11-11T19:21:10.094057Z",
+     "shell.execute_reply": "2024-11-11T19:21:10.092702Z"
     },
     "papermill": {
-     "duration": 0.025943,
-     "end_time": "2024-11-11T18:39:33.004002",
+     "duration": 0.024031,
+     "end_time": "2024-11-11T19:21:10.096748",
      "exception": false,
-     "start_time": "2024-11-11T18:39:32.978059",
+     "start_time": "2024-11-11T19:21:10.072717",
      "status": "completed"
     },
     "tags": []
@@ -252,13 +252,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca7e72d4",
+   "id": "ea4da33f",
    "metadata": {
     "papermill": {
-     "duration": 0.006307,
-     "end_time": "2024-11-11T18:39:33.016510",
+     "duration": 0.007121,
+     "end_time": "2024-11-11T19:21:10.109685",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.010203",
+     "start_time": "2024-11-11T19:21:10.102564",
      "status": "completed"
     },
     "tags": []
@@ -271,19 +271,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecfda768",
+   "id": "faf8bc85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:33.031688Z",
-     "iopub.status.busy": "2024-11-11T18:39:33.030607Z",
-     "iopub.status.idle": "2024-11-11T18:39:33.075041Z",
-     "shell.execute_reply": "2024-11-11T18:39:33.073387Z"
+     "iopub.execute_input": "2024-11-11T19:21:10.125840Z",
+     "iopub.status.busy": "2024-11-11T19:21:10.125239Z",
+     "iopub.status.idle": "2024-11-11T19:21:10.149644Z",
+     "shell.execute_reply": "2024-11-11T19:21:10.148444Z"
     },
     "papermill": {
-     "duration": 0.05529,
-     "end_time": "2024-11-11T18:39:33.078006",
+     "duration": 0.037869,
+     "end_time": "2024-11-11T19:21:10.155343",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.022716",
+     "start_time": "2024-11-11T19:21:10.117474",
      "status": "completed"
     },
     "tags": []
@@ -293,58 +293,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Değerler\n",
-      "count       0.0\n",
-      "mean        NaN\n",
-      "std         NaN\n",
-      "min         NaN\n",
-      "25%         NaN\n",
-      "50%         NaN\n",
-      "75%         NaN\n",
-      "max         NaN\n"
+      "10517\n",
+      "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
+      "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
+      "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
+      "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+      "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
+      "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
+      "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
+      "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
+      "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
+      "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
+      "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
+      "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
+      "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
+      "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
+      "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
+      "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
+      "       'SaleCondition', 'SalePrice'],\n",
+      "      dtype='object')\n"
      ]
-    }
-   ],
-   "source": [
-    "# Print summary statistics in next line\n",
-    "home_data.info\n",
-    "home_data=pd.DataFrame(home_data,columns=['Değerler'])\n",
-    "OZ=home_data.describe()\n",
-    "ortalama_deger = OZ.loc['mean', 'Değerler']\n",
-    "standart_sapma = OZ.loc['std', 'Değerler']\n",
-    "minimum_deger = OZ.loc['min', 'Değerler']\n",
-    "maksimum_deger = OZ.loc['max', 'Değerler']\n",
-    "# ve benzeri...\n",
-    "\n",
-    "# Özet istatistikleri yazdırın.\n",
-    "print(OZ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e8620f6b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:33.093861Z",
-     "iopub.status.busy": "2024-11-11T18:39:33.093316Z",
-     "iopub.status.idle": "2024-11-11T18:39:33.104319Z",
-     "shell.execute_reply": "2024-11-11T18:39:33.103117Z"
     },
-    "papermill": {
-     "duration": 0.022362,
-     "end_time": "2024-11-11T18:39:33.106857",
-     "exception": false,
-     "start_time": "2024-11-11T18:39:33.084495",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
     {
      "data": {
       "application/javascript": [
-       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 4, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"2_HomeDescription\", \"learnToolsVersion\": \"0.3.4\", \"valueTowardsCompletion\": 0.0, \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")"
+       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.5, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"2_HomeDescription\", \"learnToolsVersion\": \"0.3.4\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -356,10 +329,10 @@
     {
      "data": {
       "text/markdown": [
-       "<span style=\"color:#ccaa33\">Check:</span> When you've updated the starter code, `check()` will tell you whether your code is correct. You need to update the code that creates variables `avg_lot_size`, `newest_home_age`"
+       "<span style=\"color:#33cc33\">Correct</span>"
       ],
       "text/plain": [
-       "Check: When you've updated the starter code, `check()` will tell you whether your code is correct. You need to update the code that creates variables `avg_lot_size`, `newest_home_age`"
+       "Correct"
       ]
      },
      "metadata": {},
@@ -368,31 +341,38 @@
    ],
    "source": [
     "# What is the average lot size (rounded to nearest integer)?\n",
-    "avg_lot_size = ____\n",
+    "#home_data.info()\n",
+    "avg_lot_size = round(sum(home_data.LotArea)/len(home_data.LotArea))\n",
+    "print(avg_lot_size)\n",
+    "\n",
     "\n",
     "# As of today, how old is the newest home (current year - the date in which it was built)\n",
-    "newest_home_age = ____\n",
     "\n",
-    "# Checks your answers\n",
+    "from datetime import datetime\n",
+    "currentyear=datetime.now().year\n",
+    "\n",
+    "newest_home_age = currentyear-(home_data['YearBuilt'].max())\n",
+    "print(home_data.columns)\n",
+    " #Checks your answers\n",
     "step_2.check()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7fb5708e",
+   "execution_count": 5,
+   "id": "4f7ff908",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T18:39:33.123271Z",
-     "iopub.status.busy": "2024-11-11T18:39:33.122800Z",
-     "iopub.status.idle": "2024-11-11T18:39:33.128238Z",
-     "shell.execute_reply": "2024-11-11T18:39:33.127019Z"
+     "iopub.execute_input": "2024-11-11T19:21:10.170535Z",
+     "iopub.status.busy": "2024-11-11T19:21:10.169933Z",
+     "iopub.status.idle": "2024-11-11T19:21:10.175535Z",
+     "shell.execute_reply": "2024-11-11T19:21:10.174267Z"
     },
     "papermill": {
-     "duration": 0.017468,
-     "end_time": "2024-11-11T18:39:33.130984",
+     "duration": 0.016988,
+     "end_time": "2024-11-11T19:21:10.178825",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.113516",
+     "start_time": "2024-11-11T19:21:10.161837",
      "status": "completed"
     },
     "tags": []
@@ -405,13 +385,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d179ed56",
+   "id": "7aefaa85",
    "metadata": {
     "papermill": {
-     "duration": 0.006167,
-     "end_time": "2024-11-11T18:39:33.143815",
+     "duration": 0.007298,
+     "end_time": "2024-11-11T19:21:10.202793",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.137648",
+     "start_time": "2024-11-11T19:21:10.195495",
      "status": "completed"
     },
     "tags": []
@@ -436,13 +416,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e78fc4",
+   "id": "3c9339a1",
    "metadata": {
     "papermill": {
-     "duration": 0.00622,
-     "end_time": "2024-11-11T18:39:33.156485",
+     "duration": 0.006302,
+     "end_time": "2024-11-11T19:21:10.215490",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.150265",
+     "start_time": "2024-11-11T19:21:10.209188",
      "status": "completed"
     },
     "tags": []
@@ -456,13 +436,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3034fb",
+   "id": "4e162bb6",
    "metadata": {
     "papermill": {
-     "duration": 0.006192,
-     "end_time": "2024-11-11T18:39:33.169231",
+     "duration": 0.006026,
+     "end_time": "2024-11-11T19:21:10.227889",
      "exception": false,
-     "start_time": "2024-11-11T18:39:33.163039",
+     "start_time": "2024-11-11T19:21:10.221863",
      "status": "completed"
     },
     "tags": []
@@ -510,14 +490,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.803099,
-   "end_time": "2024-11-11T18:39:33.698225",
+   "duration": 4.873449,
+   "end_time": "2024-11-11T19:21:10.755838",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-11T18:39:27.895126",
+   "start_time": "2024-11-11T19:21:05.882389",
    "version": "2.6.0"
   }
  },
