Kaggle Notebook | Exercise: Explore Your Data | Version 6

--- a/exercise-explore-your-data.ipynb
+++ b/exercise-explore-your-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "923e5d25",
+   "id": "c1a1dece",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-11-09T08:53:59.908134Z",
@@ -12,10 +12,10 @@
      "shell.execute_reply.started": "2024-11-09T08:53:59.908097Z"
     },
     "papermill": {
-     "duration": 0.00518,
-     "end_time": "2024-11-11T19:21:08.948003",
+     "duration": 0.005067,
+     "end_time": "2024-11-11T19:22:37.624325",
      "exception": false,
-     "start_time": "2024-11-11T19:21:08.942823",
+     "start_time": "2024-11-11T19:22:37.619258",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d470706",
+   "id": "038f221f",
    "metadata": {
     "papermill": {
-     "duration": 0.004429,
-     "end_time": "2024-11-11T19:21:08.957301",
+     "duration": 0.004138,
+     "end_time": "2024-11-11T19:22:37.633271",
      "exception": false,
-     "start_time": "2024-11-11T19:21:08.952872",
+     "start_time": "2024-11-11T19:22:37.629133",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +56,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "026cded0",
+   "id": "9cf23d5f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T19:21:08.970122Z",
-     "iopub.status.busy": "2024-11-11T19:21:08.968407Z",
-     "iopub.status.idle": "2024-11-11T19:21:09.984054Z",
-     "shell.execute_reply": "2024-11-11T19:21:09.982465Z"
+     "iopub.execute_input": "2024-11-11T19:22:37.643805Z",
+     "iopub.status.busy": "2024-11-11T19:22:37.643346Z",
+     "iopub.status.idle": "2024-11-11T19:22:38.648456Z",
+     "shell.execute_reply": "2024-11-11T19:22:38.647369Z"
     },
     "papermill": {
-     "duration": 1.024846,
-     "end_time": "2024-11-11T19:21:09.986767",
+     "duration": 1.013546,
+     "end_time": "2024-11-11T19:22:38.651185",
      "exception": false,
-     "start_time": "2024-11-11T19:21:08.961921",
+     "start_time": "2024-11-11T19:22:37.637639",
      "status": "completed"
     },
     "tags": []
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70409be",
+   "id": "4c62bfc9",
    "metadata": {
     "papermill": {
-     "duration": 0.004289,
-     "end_time": "2024-11-11T19:21:09.995838",
+     "duration": 0.004342,
+     "end_time": "2024-11-11T19:22:38.660251",
      "exception": false,
-     "start_time": "2024-11-11T19:21:09.991549",
+     "start_time": "2024-11-11T19:22:38.655909",
      "status": "completed"
     },
     "tags": []
@@ -112,19 +112,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3b2a5d5",
+   "id": "9ac2ecb3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T19:21:10.007765Z",
-     "iopub.status.busy": "2024-11-11T19:21:10.006681Z",
-     "iopub.status.idle": "2024-11-11T19:21:10.064864Z",
-     "shell.execute_reply": "2024-11-11T19:21:10.063639Z"
+     "iopub.execute_input": "2024-11-11T19:22:38.671752Z",
+     "iopub.status.busy": "2024-11-11T19:22:38.671164Z",
+     "iopub.status.idle": "2024-11-11T19:22:38.727894Z",
+     "shell.execute_reply": "2024-11-11T19:22:38.726794Z"
     },
     "papermill": {
-     "duration": 0.066927,
-     "end_time": "2024-11-11T19:21:10.067662",
+     "duration": 0.065248,
+     "end_time": "2024-11-11T19:22:38.730339",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.000735",
+     "start_time": "2024-11-11T19:22:38.665091",
      "status": "completed"
     },
     "tags": []
@@ -171,19 +171,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d64b9e2",
+   "id": "8a925cd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T19:21:10.080710Z",
-     "iopub.status.busy": "2024-11-11T19:21:10.079203Z",
-     "iopub.status.idle": "2024-11-11T19:21:10.094057Z",
-     "shell.execute_reply": "2024-11-11T19:21:10.092702Z"
+     "iopub.execute_input": "2024-11-11T19:22:38.742803Z",
+     "iopub.status.busy": "2024-11-11T19:22:38.741615Z",
+     "iopub.status.idle": "2024-11-11T19:22:38.756368Z",
+     "shell.execute_reply": "2024-11-11T19:22:38.755287Z"
     },
     "papermill": {
-     "duration": 0.024031,
-     "end_time": "2024-11-11T19:21:10.096748",
+     "duration": 0.023455,
+     "end_time": "2024-11-11T19:22:38.758737",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.072717",
+     "start_time": "2024-11-11T19:22:38.735282",
      "status": "completed"
     },
     "tags": []
@@ -252,13 +252,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4da33f",
+   "id": "fe5be7c9",
    "metadata": {
     "papermill": {
-     "duration": 0.007121,
-     "end_time": "2024-11-11T19:21:10.109685",
+     "duration": 0.005502,
+     "end_time": "2024-11-11T19:22:38.769957",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.102564",
+     "start_time": "2024-11-11T19:22:38.764455",
      "status": "completed"
     },
     "tags": []
@@ -271,19 +271,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "faf8bc85",
+   "id": "bd6e6e61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T19:21:10.125840Z",
-     "iopub.status.busy": "2024-11-11T19:21:10.125239Z",
-     "iopub.status.idle": "2024-11-11T19:21:10.149644Z",
-     "shell.execute_reply": "2024-11-11T19:21:10.148444Z"
+     "iopub.execute_input": "2024-11-11T19:22:38.783136Z",
+     "iopub.status.busy": "2024-11-11T19:22:38.782652Z",
+     "iopub.status.idle": "2024-11-11T19:22:38.802567Z",
+     "shell.execute_reply": "2024-11-11T19:22:38.801417Z"
     },
     "papermill": {
-     "duration": 0.037869,
-     "end_time": "2024-11-11T19:21:10.155343",
+     "duration": 0.029869,
+     "end_time": "2024-11-11T19:22:38.805378",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.117474",
+     "start_time": "2024-11-11T19:22:38.775509",
      "status": "completed"
     },
     "tags": []
@@ -294,24 +294,7 @@
      "output_type": "stream",
      "text": [
       "10517\n",
-      "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
-      "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
-      "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
-      "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
-      "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
-      "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
-      "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
-      "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
-      "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
-      "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
-      "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
-      "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
-      "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
-      "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
-      "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
-      "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
-      "       'SaleCondition', 'SalePrice'],\n",
-      "      dtype='object')\n"
+      "14\n"
      ]
     },
     {
@@ -352,7 +335,7 @@
     "currentyear=datetime.now().year\n",
     "\n",
     "newest_home_age = currentyear-(home_data['YearBuilt'].max())\n",
-    "print(home_data.columns)\n",
+    "print(newest_home_age)\n",
     " #Checks your answers\n",
     "step_2.check()"
    ]
@@ -360,38 +343,99 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f7ff908",
+   "id": "b86528ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-11T19:21:10.170535Z",
-     "iopub.status.busy": "2024-11-11T19:21:10.169933Z",
-     "iopub.status.idle": "2024-11-11T19:21:10.175535Z",
-     "shell.execute_reply": "2024-11-11T19:21:10.174267Z"
+     "iopub.execute_input": "2024-11-11T19:22:38.819374Z",
+     "iopub.status.busy": "2024-11-11T19:22:38.818934Z",
+     "iopub.status.idle": "2024-11-11T19:22:38.832276Z",
+     "shell.execute_reply": "2024-11-11T19:22:38.831143Z"
     },
     "papermill": {
-     "duration": 0.016988,
-     "end_time": "2024-11-11T19:21:10.178825",
+     "duration": 0.023294,
+     "end_time": "2024-11-11T19:22:38.834789",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.161837",
+     "start_time": "2024-11-11T19:22:38.811495",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"interactionType\": 2, \"questionType\": 1, \"questionId\": \"2_HomeDescription\", \"learnToolsVersion\": \"0.3.4\", \"valueTowardsCompletion\": 0.0, \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\", \"outcomeType\": 4}}, \"*\")"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#3366cc\">Hint:</span> Run the describe command. Lot size is in the column called LotArea. Also look at YearBuilt. Remember to round lot size "
+      ],
+      "text/plain": [
+       "Hint: Run the describe command. Lot size is in the column called LotArea. Also look at YearBuilt. Remember to round lot size "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"interactionType\": 3, \"questionType\": 1, \"questionId\": \"2_HomeDescription\", \"learnToolsVersion\": \"0.3.4\", \"valueTowardsCompletion\": 0.0, \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\", \"outcomeType\": 4}}, \"*\")"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc99\">Solution:</span> \n",
+       "```python\n",
+       "# using data read from home_data.describe()\n",
+       "avg_lot_size = 10517\n",
+       "newest_home_age = 14\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "Solution: \n",
+       "```python\n",
+       "# using data read from home_data.describe()\n",
+       "avg_lot_size = 10517\n",
+       "newest_home_age = 14\n",
+       "\n",
+       "```"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#step_2.hint()\n",
-    "#step_2.solution()"
+    "step_2.hint()\n",
+    "step_2.solution()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7aefaa85",
+   "id": "9dea640c",
    "metadata": {
     "papermill": {
-     "duration": 0.007298,
-     "end_time": "2024-11-11T19:21:10.202793",
+     "duration": 0.007626,
+     "end_time": "2024-11-11T19:22:38.849149",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.195495",
+     "start_time": "2024-11-11T19:22:38.841523",
      "status": "completed"
     },
     "tags": []
@@ -416,13 +460,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c9339a1",
+   "id": "3b560c3f",
    "metadata": {
     "papermill": {
-     "duration": 0.006302,
-     "end_time": "2024-11-11T19:21:10.215490",
+     "duration": 0.006541,
+     "end_time": "2024-11-11T19:22:38.862351",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.209188",
+     "start_time": "2024-11-11T19:22:38.855810",
      "status": "completed"
     },
     "tags": []
@@ -436,13 +480,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e162bb6",
+   "id": "f6e66d58",
    "metadata": {
     "papermill": {
-     "duration": 0.006026,
-     "end_time": "2024-11-11T19:21:10.227889",
+     "duration": 0.006555,
+     "end_time": "2024-11-11T19:22:38.875567",
      "exception": false,
-     "start_time": "2024-11-11T19:21:10.221863",
+     "start_time": "2024-11-11T19:22:38.869012",
      "status": "completed"
     },
     "tags": []
@@ -490,14 +534,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 4.873449,
-   "end_time": "2024-11-11T19:21:10.755838",
+   "duration": 4.897542,
+   "end_time": "2024-11-11T19:22:39.403748",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-11T19:21:05.882389",
+   "start_time": "2024-11-11T19:22:34.506206",
    "version": "2.6.0"
   }
  },
